--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+/.idea/caches
+/.idea/gradle.xml
+/.idea/misc.xml
+/.idea/modules.xml
 .DS_Store
 /build
 /captures
