--- a/rsrp/build.gradle
+++ b/rsrp/build.gradle
@@ -36,8 +36,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
-    compile 'org.apache.commons:commons-lang3:3.6'
+    implementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+    implementation 'org.apache.commons:commons-lang3:3.6'
 
     //compile group: 'org.apache.http' , name: 'httpclient-android' , version: '4.3.5.1'
 }
